# Graphex

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  act.sh  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug-report.md  milestone-task.md
.github/workflows/: ci.yml
META/: Labels.md  Meta.md  Progress.md  Todo.md
META/CORE/: Meta.md  Technical.md
META/Decisions/: ADR-0001-multi-agent-pipeline-architecture.md  ADR-0002-gleaning-and-entity-resolution.md  ADR-0003-cocoindex-style-structured-extraction.md  ADR-0004-embedding-entity-resolution.md  ADR-0005-graphiti-cascading-er.md  ADR-0006-tiered-model-strategy.md  ADR-0007-experiment-organization.md  ADR-0008-progressive-understanding-pipeline.md  Meta.md
META/Milestone/: M1.md  Meta.md  _TEMPLATE.md
META/RESEARCH/: Academic_Survey.md  Anchor_Audit.md  COGNITIVE_FOUNDATIONS.md  Graph_Density_Analysis.md  KG_Pipeline_Patterns.md  Knowledge_Graph_Health_Metrics.md  Meta.md  NODE_EDGE_SCHEMA.md  Narrative_Schema.md  PDF_Parsing_Upgrade.md  Prompt_Engineering_Log.md  SCHEMA_CHANGELOG.md
benchmark/: PIPELINE_DIAGNOSIS.md  README.md
benchmark/scripts/: cocoindex_spike.py
benchmark/templates/: evaluation_template.md
benchmark/visualizations/: threads-cv-graph.html  threads-cv-graph.mermaid
examples/: example_extraction.py  test_enhanced_pipeline.py  test_improved_extraction.py  test_pdf_extraction.py
experiments/configs/: v1_baseline.yaml  v2_embedding_er.yaml  v3_graphiti_er.yaml  v4_large_chunk.yaml  v5_flash_lite.yaml  (+3 more)
src/: __init__.py
tests/: __init__.py  test_edge_fix.py
(+72 files in other folders)
